Documentation + Ajout de la suppression d'une bibliothèque
