# src/controllers/bookshelfController.js
@@ -1,4 +1,5 @@
 const bookshelfModel = require('../models/bookshelfModel')
+const bookModel = require("../models/bookModel");
 
 const getAllBookshelf = async (request, response) => {
     try {
@@ -59,9 +60,27 @@ const updateBookshelf = async (request, response) => {
     }
 }
 
+const deleteBookshelf = async (request, response) => {
+    try {
+        const bookshelf = await bookModel.findByPk(request.params.id);
+
+        if (!bookshelf) {
+            return response.status(404).json({ message: 'Bookshelf not found' });
+        }
+
+        await bookshelf.destroy(request.body)
+        response.status(200).send('Bookshelf successfully deleted');
+    } catch (error) {
+        response.status(500).send({
+            message: error.message || 'Erreur survenue lors de la suppression d\'une bibliothèque.'
+        });
+    }
+}
+
 module.exports = {
     getAllBookshelf,
     getBookshelfById,
     createBookshelf,
-    updateBookshelf
+    updateBookshelf,
+    deleteBookshelf
 }
