# src/routes/bookshelfRoutes.js
@@ -1,10 +1,11 @@
 const router = require('express').Router();
 
-const { getAllBookshelf, getBookshelfById, createBookshelf, updateBookshelf } = require('../controllers/bookshelfController')
+const { getAllBookshelf, getBookshelfById, createBookshelf, updateBookshelf, deleteBookshelf } = require('../controllers/bookshelfController')
 
 router.get('/', getAllBookshelf)
 router.get('/:id', getBookshelfById)
 router.post('/create', createBookshelf)
 router.patch('/update/:id', updateBookshelf)
+router.delete('/delete/:id', deleteBookshelf)
 
 module.exports = router;
